--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,67 @@
 body { background: #1bbc9b; }
 h1 { color: #FFF; font-size: 120px; text-align: center; }
 #countdown { color: #FFF; font-size: 160px; text-align: center; }
-input { display: block; margin-left: auto; margin-right: auto; }
+input, label{ display: block; margin: 0 auto; }
+
+
+
+/* foundation checkbox */
+
+.switch {
+  padding: 0;
+  border: none;
+  position: relative; }
+  .switch label {
+    display: block;
+    margin-bottom: 1rem;
+    position: relative;
+    color: transparent;
+    background: #dddddd;
+    text-indent: 100%;
+    width: 4rem;
+    height: 2rem;
+    cursor: pointer;
+    transition: left 0.15s ease-out; }
+  .switch input {
+    opacity: 0;
+    position: absolute;
+    top: 9px;
+    left: 10px;
+    padding: 0; }
+    .switch input + label {
+      margin-left: 0;
+      margin-right: 0; }
+  .switch label:after {
+    content: "";
+    display: block;
+    background: white;
+    position: absolute;
+    top: .25rem;
+    left: .25rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    -webkit-transition: left 0.15s ease-out;
+    -moz-transition: left 0.15s ease-out;
+    transition: left 0.15s ease-out;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+  .switch input:checked + label {
+    background: #008cba; }
+  .switch input:checked + label:after {
+    left: 2.25rem; }
+  .switch label {
+    width: 4rem;
+    height: 2rem; }
+  .switch label:after {
+    width: 1.5rem;
+    height: 1.5rem; }
+  .switch input:checked + label:after {
+    left: 2.25rem; }
+  .switch label {
+    color: transparent;
+    background: #dddddd; }
+  .switch label:after {
+    background: white; }
+  .switch input:checked + label {
+    background: #008cba; }
